--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,14 @@
 {
-    "cSpell.words": [
-        "Elephantidae",
-        "Elephas",
-        "Kostia",
-        "Kostiantyn",
-        "Mammonts",
-        "Senjor",
-        "Teimurov",
-        "скроле"
-    ]
+  "cSpell.words": [
+    "Alisher",
+    "Elephantidae",
+    "Elephas",
+    "Kostia",
+    "Kostiantyn",
+    "Mammonts",
+    "Senjor",
+    "Sergey",
+    "Teimurov",
+    "скроле"
+  ]
 }
