--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,12 +5,17 @@
     "Elephantidae",
     "Elephas",
     "fedor",
+    "fullfilled",
     "Kostia",
     "Kostiantyn",
     "Mammonts",
+    "resove",
     "Senjor",
     "Sergey",
     "Teimurov",
+    "колбека",
+    "промис",
     "скроле"
-  ]
+  ],
+  "liveServer.settings.port": 5501
 }
