--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,8 +13,16 @@
     "Senjor",
     "Sergey",
     "Teimurov",
+    "бэкенде",
+    "деструктуризации",
+    "джсон",
+    "джсона",
+    "джсоном",
+    "инфу",
     "колбека",
+    "парсим",
     "промис",
+    "респонса",
     "скроле"
   ],
   "liveServer.settings.port": 5501
